--- a/Journey/Journey/Sources/Cells/CourseTableView/FirstDayTableViewCell.xib
+++ b/Journey/Journey/Sources/Cells/CourseTableView/FirstDayTableViewCell.xib
@@ -62,11 +62,11 @@
                             <constraint firstItem="Ssc-oE-dGm" firstAttribute="top" secondItem="OAV-39-0oH" secondAttribute="top" id="gZp-3I-0pj"/>
                         </constraints>
                     </stackView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W98-sa-HWL">
-                        <rect key="frame" x="142.5" y="82.5" width="57.5" height="24.5"/>
+                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W98-sa-HWL">
+                        <rect key="frame" x="118.5" y="82.5" width="81.5" height="24.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06.28" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NRs-Gb-6Xj">
-                                <rect key="frame" x="12" y="5" width="33.5" height="14.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06.28 완료" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NRs-Gb-6Xj">
+                                <rect key="frame" x="12" y="5" width="57.5" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -112,10 +112,10 @@
     <resources>
         <image name="waterSampleImg" width="36" height="36"/>
         <namedColor name="CourseBgGray">
-            <color red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.97600001096725464" green="0.97600001096725464" blue="0.97600001096725464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Pink">
-            <color red="0.95294117647058818" green="0.48627450980392156" blue="0.62352941176470589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.95300000905990601" green="0.48600000143051147" blue="0.62400001287460327" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
