--- a/Journey/Journey/Sources/Cells/CourseTableView/EvenDayTableViewCell.xib
+++ b/Journey/Journey/Sources/Cells/CourseTableView/EvenDayTableViewCell.xib
@@ -5,49 +5,40 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="EvenDayTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="EvenDayTableViewCell" rowHeight="188" id="KGk-i7-Jjw" customClass="EvenDayTableViewCell" customModule="Journey" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="188"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="EvenDayTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="EvenDayTableViewCell" rowHeight="163" id="KGk-i7-Jjw" customClass="EvenDayTableViewCell" customModule="Journey" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="163"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="188"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="163"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KcE-mo-iO7">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="188"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="163"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zns-8h-kyc">
-                                <rect key="frame" x="37" y="164" width="20" height="24"/>
-                                <color key="backgroundColor" name="White"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="20" id="7ud-TF-95V"/>
-                                    <constraint firstAttribute="height" constant="24" id="W3n-9d-xpC"/>
-                                </constraints>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ROc-9O-fd3">
-                                <rect key="frame" x="24" y="140" width="48" height="48"/>
+                                <rect key="frame" x="24" y="97" width="66" height="66"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waterSampleImg" translatesAutoresizingMaskIntoConstraints="NO" id="6eV-ht-Qjc">
-                                        <rect key="frame" x="6" y="6" width="36" height="36"/>
+                                        <rect key="frame" x="3" y="3" width="60" height="60"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" name="CourseUndoneGray"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="50Z-1e-CEI"/>
-                                    <constraint firstAttribute="trailing" secondItem="6eV-ht-Qjc" secondAttribute="trailing" constant="6" id="5Jm-27-RtU"/>
-                                    <constraint firstItem="6eV-ht-Qjc" firstAttribute="leading" secondItem="ROc-9O-fd3" secondAttribute="leading" constant="6" id="DGC-bW-6jH"/>
-                                    <constraint firstAttribute="bottom" secondItem="6eV-ht-Qjc" secondAttribute="bottom" constant="6" id="g6B-oh-f6p"/>
-                                    <constraint firstItem="6eV-ht-Qjc" firstAttribute="top" secondItem="ROc-9O-fd3" secondAttribute="top" constant="6" id="lxh-Zy-T1W"/>
-                                    <constraint firstAttribute="width" constant="48" id="tRv-64-3me"/>
+                                    <constraint firstAttribute="height" constant="66" id="50Z-1e-CEI"/>
+                                    <constraint firstAttribute="trailing" secondItem="6eV-ht-Qjc" secondAttribute="trailing" constant="3" id="5Jm-27-RtU"/>
+                                    <constraint firstItem="6eV-ht-Qjc" firstAttribute="leading" secondItem="ROc-9O-fd3" secondAttribute="leading" constant="3" id="DGC-bW-6jH"/>
+                                    <constraint firstAttribute="bottom" secondItem="6eV-ht-Qjc" secondAttribute="bottom" constant="3" id="g6B-oh-f6p"/>
+                                    <constraint firstItem="6eV-ht-Qjc" firstAttribute="top" secondItem="ROc-9O-fd3" secondAttribute="top" constant="3" id="lxh-Zy-T1W"/>
+                                    <constraint firstAttribute="width" constant="66" id="tRv-64-3me"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="0Pk-db-TcF">
-                                <rect key="frame" x="92" y="140" width="133.5" height="48"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0Pk-db-TcF">
+                                <rect key="frame" x="110" y="103.5" width="133.5" height="53"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="2일차" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UAN-Yg-Cxx">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="25.5"/>
@@ -56,7 +47,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="깨끗하게 손 씻기 3회" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7z3-Jf-lbd">
-                                        <rect key="frame" x="0.0" y="33.5" width="133.5" height="14.5"/>
+                                        <rect key="frame" x="0.0" y="33.5" width="133.5" height="19.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -67,7 +58,7 @@
                                 </constraints>
                             </stackView>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cAp-Ts-isd">
-                                <rect key="frame" x="183" y="140.5" width="81.5" height="24.5"/>
+                                <rect key="frame" x="201" y="104" width="81.5" height="24.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06.28 완료" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2x0-NQ-DZV">
                                         <rect key="frame" x="12" y="5" width="57.5" height="14.5"/>
@@ -88,14 +79,11 @@
                         <color key="backgroundColor" name="CourseBgGray"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="ROc-9O-fd3" secondAttribute="bottom" id="0LI-Op-zM6"/>
-                            <constraint firstItem="0Pk-db-TcF" firstAttribute="bottom" secondItem="ROc-9O-fd3" secondAttribute="bottom" id="7lP-Qi-l2b"/>
                             <constraint firstItem="ROc-9O-fd3" firstAttribute="leading" secondItem="KcE-mo-iO7" secondAttribute="leading" constant="24" id="ImL-qB-IvM"/>
-                            <constraint firstAttribute="bottom" secondItem="zns-8h-kyc" secondAttribute="bottom" id="U3B-t3-1lL"/>
                             <constraint firstItem="cAp-Ts-isd" firstAttribute="leading" secondItem="UAN-Yg-Cxx" secondAttribute="trailing" constant="41" id="X8n-XL-OaI"/>
                             <constraint firstItem="0Pk-db-TcF" firstAttribute="leading" secondItem="ROc-9O-fd3" secondAttribute="trailing" constant="20" id="asn-Xb-ZUp"/>
                             <constraint firstItem="cAp-Ts-isd" firstAttribute="centerY" secondItem="UAN-Yg-Cxx" secondAttribute="centerY" id="dtR-qd-NJ3"/>
-                            <constraint firstItem="zns-8h-kyc" firstAttribute="leading" secondItem="KcE-mo-iO7" secondAttribute="leading" constant="37" id="txf-qu-2dP"/>
-                            <constraint firstItem="0Pk-db-TcF" firstAttribute="top" secondItem="ROc-9O-fd3" secondAttribute="top" id="y9n-mH-NwK"/>
+                            <constraint firstItem="0Pk-db-TcF" firstAttribute="centerY" secondItem="ROc-9O-fd3" secondAttribute="centerY" id="gMy-dC-ee4"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -114,7 +102,6 @@
                 <outlet property="dayLabel" destination="2x0-NQ-DZV" id="3Hd-gv-yL4"/>
                 <outlet property="dayLabelBgView" destination="cAp-Ts-isd" id="znT-Ef-moZ"/>
                 <outlet property="descriptionLabel" destination="7z3-Jf-lbd" id="kFh-Nf-eNj"/>
-                <outlet property="nextDayRoadView" destination="zns-8h-kyc" id="YzH-oQ-ECB"/>
                 <outlet property="propertyBgView" destination="ROc-9O-fd3" id="fcg-Qe-Mf1"/>
                 <outlet property="propertyImageView" destination="ROc-9O-fd3" id="LU3-jJ-x5D"/>
             </connections>
@@ -131,9 +118,6 @@
         </namedColor>
         <namedColor name="Pink">
             <color red="0.95300000905990601" green="0.48600000143051147" blue="0.62400001287460327" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="White">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
