--- a/Journey/Journey/Sources/Cells/CourseTableView/FirstDayTableViewCell.xib
+++ b/Journey/Journey/Sources/Cells/CourseTableView/FirstDayTableViewCell.xib
@@ -5,45 +5,45 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FirstDayTableViewCell" rowHeight="130" id="KGk-i7-Jjw" customClass="FirstDayTableViewCell" customModule="Journey" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="379" height="130"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FirstDayTableViewCell" rowHeight="123" id="KGk-i7-Jjw" customClass="FirstDayTableViewCell" customModule="Journey" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="379" height="123"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="379" height="130"/>
+                <rect key="frame" x="0.0" y="0.0" width="379" height="123"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ayN-lo-PQE">
-                        <rect key="frame" x="322" y="0.0" width="20" height="130"/>
+                        <rect key="frame" x="312" y="0.0" width="20" height="90"/>
                         <color key="backgroundColor" name="Pink"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="78t-8k-tn9"/>
+                            <constraint firstAttribute="height" constant="90" id="ADr-e8-FYP"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CCZ-df-TIz">
-                        <rect key="frame" x="308" y="82" width="48" height="48"/>
+                        <rect key="frame" x="289" y="57" width="66" height="66"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waterSampleImg" translatesAutoresizingMaskIntoConstraints="NO" id="t29-ZG-jYv">
-                                <rect key="frame" x="6" y="6" width="36" height="36"/>
+                                <rect key="frame" x="3" y="3" width="60" height="60"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" name="Pink"/>
                         <constraints>
-                            <constraint firstItem="t29-ZG-jYv" firstAttribute="leading" secondItem="CCZ-df-TIz" secondAttribute="leading" constant="6" id="8j9-ko-ovv"/>
-                            <constraint firstAttribute="trailing" secondItem="t29-ZG-jYv" secondAttribute="trailing" constant="6" id="NZd-Fm-Nbl"/>
-                            <constraint firstAttribute="bottom" secondItem="t29-ZG-jYv" secondAttribute="bottom" constant="6" id="adV-kY-kZT"/>
-                            <constraint firstItem="t29-ZG-jYv" firstAttribute="top" secondItem="CCZ-df-TIz" secondAttribute="top" constant="6" id="cEr-b4-sr4"/>
-                            <constraint firstAttribute="width" constant="48" id="lme-5t-RaM"/>
-                            <constraint firstAttribute="height" constant="48" id="xMC-gA-eUW"/>
+                            <constraint firstItem="t29-ZG-jYv" firstAttribute="leading" secondItem="CCZ-df-TIz" secondAttribute="leading" constant="3" id="8j9-ko-ovv"/>
+                            <constraint firstAttribute="trailing" secondItem="t29-ZG-jYv" secondAttribute="trailing" constant="3" id="NZd-Fm-Nbl"/>
+                            <constraint firstAttribute="bottom" secondItem="t29-ZG-jYv" secondAttribute="bottom" constant="3" id="adV-kY-kZT"/>
+                            <constraint firstItem="t29-ZG-jYv" firstAttribute="top" secondItem="CCZ-df-TIz" secondAttribute="top" constant="3" id="cEr-b4-sr4"/>
+                            <constraint firstAttribute="width" constant="66" id="lme-5t-RaM"/>
+                            <constraint firstAttribute="height" constant="66" id="xMC-gA-eUW"/>
                         </constraints>
                     </view>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="OAV-39-0oH">
-                        <rect key="frame" x="127" y="82" width="161" height="48"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="OAV-39-0oH">
+                        <rect key="frame" x="108" y="63.5" width="161" height="53"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="1일차" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ssc-oE-dGm">
                                 <rect key="frame" x="114" y="0.0" width="47" height="25.5"/>
@@ -52,7 +52,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알콜스왑으로 핸드폰 닦기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wcm-tR-8hh">
-                                <rect key="frame" x="0.0" y="33.5" width="161" height="14.5"/>
+                                <rect key="frame" x="0.0" y="33.5" width="161" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -63,7 +63,7 @@
                         </constraints>
                     </stackView>
                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W98-sa-HWL">
-                        <rect key="frame" x="118.5" y="82.5" width="81.5" height="24.5"/>
+                        <rect key="frame" x="99.5" y="64" width="81.5" height="24.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06.28 완료" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NRs-Gb-6Xj">
                                 <rect key="frame" x="12" y="5" width="57.5" height="14.5"/>
@@ -88,11 +88,9 @@
                     <constraint firstItem="CCZ-df-TIz" firstAttribute="leading" secondItem="OAV-39-0oH" secondAttribute="trailing" constant="20" id="Cgc-br-pe0"/>
                     <constraint firstItem="CCZ-df-TIz" firstAttribute="centerX" secondItem="ayN-lo-PQE" secondAttribute="centerX" id="HIH-xT-6Lk"/>
                     <constraint firstItem="Ssc-oE-dGm" firstAttribute="leading" secondItem="W98-sa-HWL" secondAttribute="trailing" constant="41" id="IKN-0N-PKV"/>
-                    <constraint firstItem="OAV-39-0oH" firstAttribute="top" secondItem="CCZ-df-TIz" secondAttribute="top" id="My1-OR-ovm"/>
-                    <constraint firstItem="OAV-39-0oH" firstAttribute="bottom" secondItem="CCZ-df-TIz" secondAttribute="bottom" id="SeE-uW-ZBx"/>
+                    <constraint firstItem="OAV-39-0oH" firstAttribute="centerY" secondItem="CCZ-df-TIz" secondAttribute="centerY" id="d0J-eL-WAA"/>
                     <constraint firstAttribute="bottom" secondItem="CCZ-df-TIz" secondAttribute="bottom" id="miR-hw-ROa"/>
-                    <constraint firstAttribute="trailing" secondItem="ayN-lo-PQE" secondAttribute="trailing" constant="37" id="ry9-P2-0av"/>
-                    <constraint firstAttribute="bottom" secondItem="ayN-lo-PQE" secondAttribute="bottom" id="y8A-jR-Vv5"/>
+                    <constraint firstAttribute="trailing" secondItem="ayN-lo-PQE" secondAttribute="trailing" constant="47" id="ry9-P2-0av"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
