--- a/Journey/Journey/Sources/Cells/CourseTableView/OddDayTableViewCell.xib
+++ b/Journey/Journey/Sources/Cells/CourseTableView/OddDayTableViewCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="OddDayTableViewCell" rowHeight="188" id="KGk-i7-Jjw" customClass="OddDayTableViewCell" customModule="Journey" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="188"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="OddDayTableViewCell" rowHeight="166" id="KGk-i7-Jjw" customClass="OddDayTableViewCell" customModule="Journey" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="166"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="188"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="166"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="QmC-Yq-Uzf">
-                        <rect key="frame" x="113.5" y="140" width="114.5" height="48"/>
+                        <rect key="frame" x="95.5" y="106.5" width="114.5" height="53"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="3일차" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JoR-95-xqW">
                                 <rect key="frame" x="64" y="0.0" width="50.5" height="25.5"/>
@@ -29,7 +29,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="쉿, 아직 비밀이야." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="496-Ws-be2">
-                                <rect key="frame" x="0.0" y="33.5" width="114.5" height="14.5"/>
+                                <rect key="frame" x="0.0" y="33.5" width="114.5" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -40,7 +40,7 @@
                         </constraints>
                     </stackView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N6t-IT-2DW">
-                        <rect key="frame" x="262" y="164" width="20" height="24"/>
+                        <rect key="frame" x="262" y="142" width="20" height="24"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="ToV-QN-qRu"/>
@@ -48,24 +48,24 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HuI-8E-oTC">
-                        <rect key="frame" x="248" y="140" width="48" height="48"/>
+                        <rect key="frame" x="230" y="100" width="66" height="66"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waterSampleImg" translatesAutoresizingMaskIntoConstraints="NO" id="TN8-Nk-g1o">
-                                <rect key="frame" x="6" y="6" width="36" height="36"/>
+                                <rect key="frame" x="3" y="3" width="60" height="60"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" name="CourseUndoneGray"/>
                         <constraints>
-                            <constraint firstItem="TN8-Nk-g1o" firstAttribute="leading" secondItem="HuI-8E-oTC" secondAttribute="leading" constant="6" id="6WX-lC-0zJ"/>
-                            <constraint firstItem="TN8-Nk-g1o" firstAttribute="top" secondItem="HuI-8E-oTC" secondAttribute="top" constant="6" id="B71-Cf-d13"/>
-                            <constraint firstAttribute="width" constant="48" id="Rgu-ok-HFB"/>
-                            <constraint firstAttribute="height" constant="48" id="RqE-LW-A6F"/>
-                            <constraint firstAttribute="bottom" secondItem="TN8-Nk-g1o" secondAttribute="bottom" constant="6" id="prZ-8o-vZf"/>
-                            <constraint firstAttribute="trailing" secondItem="TN8-Nk-g1o" secondAttribute="trailing" constant="6" id="wWW-fr-7wk"/>
+                            <constraint firstItem="TN8-Nk-g1o" firstAttribute="leading" secondItem="HuI-8E-oTC" secondAttribute="leading" constant="3" id="6WX-lC-0zJ"/>
+                            <constraint firstItem="TN8-Nk-g1o" firstAttribute="top" secondItem="HuI-8E-oTC" secondAttribute="top" constant="3" id="B71-Cf-d13"/>
+                            <constraint firstAttribute="width" constant="66" id="Rgu-ok-HFB"/>
+                            <constraint firstAttribute="height" constant="66" id="RqE-LW-A6F"/>
+                            <constraint firstAttribute="bottom" secondItem="TN8-Nk-g1o" secondAttribute="bottom" constant="3" id="prZ-8o-vZf"/>
+                            <constraint firstAttribute="trailing" secondItem="TN8-Nk-g1o" secondAttribute="trailing" constant="3" id="wWW-fr-7wk"/>
                         </constraints>
                     </view>
                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ffh-3t-dKY">
-                        <rect key="frame" x="55" y="140.5" width="81.5" height="24.5"/>
+                        <rect key="frame" x="37" y="107" width="81.5" height="24.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06.28 완료" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hA5-CL-N1N">
                                 <rect key="frame" x="12" y="5" width="57.5" height="14.5"/>
@@ -88,11 +88,10 @@
                     <constraint firstAttribute="trailing" secondItem="HuI-8E-oTC" secondAttribute="trailing" constant="24" id="4U9-yE-jQD"/>
                     <constraint firstItem="JoR-95-xqW" firstAttribute="leading" secondItem="ffh-3t-dKY" secondAttribute="trailing" constant="41" id="K2h-ID-2kM"/>
                     <constraint firstAttribute="trailing" secondItem="N6t-IT-2DW" secondAttribute="trailing" constant="38" id="MuK-aF-YXb"/>
-                    <constraint firstItem="QmC-Yq-Uzf" firstAttribute="bottom" secondItem="HuI-8E-oTC" secondAttribute="bottom" id="V4O-tZ-Qmb"/>
                     <constraint firstItem="HuI-8E-oTC" firstAttribute="leading" secondItem="QmC-Yq-Uzf" secondAttribute="trailing" constant="20" id="Ztb-mj-oWr"/>
                     <constraint firstAttribute="bottom" secondItem="N6t-IT-2DW" secondAttribute="bottom" id="bPg-Ic-4yQ"/>
+                    <constraint firstItem="QmC-Yq-Uzf" firstAttribute="centerY" secondItem="TN8-Nk-g1o" secondAttribute="centerY" id="ivs-jV-Y51"/>
                     <constraint firstItem="ffh-3t-dKY" firstAttribute="centerY" secondItem="JoR-95-xqW" secondAttribute="centerY" id="kHM-rb-D1t"/>
-                    <constraint firstItem="QmC-Yq-Uzf" firstAttribute="top" secondItem="HuI-8E-oTC" secondAttribute="top" id="sz2-Jk-eiS"/>
                     <constraint firstAttribute="bottom" secondItem="HuI-8E-oTC" secondAttribute="bottom" id="t80-YK-svh"/>
                 </constraints>
             </tableViewCellContentView>
