--- a/Journey/Journey/Sources/Cells/MedalCollectionView/MedalCollectionViewCell.xib
+++ b/Journey/Journey/Sources/Cells/MedalCollectionView/MedalCollectionViewCell.xib
@@ -11,20 +11,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="MedalCollectionViewCell" customModule="Journey" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="596" height="260"/>
+            <rect key="frame" x="0.0" y="0.0" width="596" height="120"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="596" height="260"/>
+                <rect key="frame" x="0.0" y="0.0" width="596" height="120"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eOH-8R-YgI">
-                        <rect key="frame" x="0.0" y="0.0" width="596" height="260"/>
+                        <rect key="frame" x="0.0" y="0.0" width="596" height="120"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flwGraphic" translatesAutoresizingMaskIntoConstraints="NO" id="taF-ea-GQu">
-                                <rect key="frame" x="22" y="22" width="101" height="216"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sampleMoodImg" translatesAutoresizingMaskIntoConstraints="NO" id="taF-ea-GQu">
+                                <rect key="frame" x="22" y="22" width="76" height="76"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="taF-ea-GQu" secondAttribute="height" multiplier="1:1" id="suU-ZO-5WD"/>
+                                </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="KpK-vt-hOd">
-                                <rect key="frame" x="141" y="95" width="165.5" height="70"/>
+                                <rect key="frame" x="116" y="25" width="133" height="70"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="kEJ-Aq-PSb">
                                         <rect key="frame" x="0.0" y="0.0" width="133" height="40"/>
@@ -43,22 +46,42 @@
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2021.07.31 ~ 2021.08.07" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jBT-D5-ZZw">
-                                        <rect key="frame" x="0.0" y="52" width="165.5" height="18"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2021.07.31" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jBT-D5-ZZw">
+                                        <rect key="frame" x="0.0" y="52" width="72.5" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xCF-pV-IKY">
+                                <rect key="frame" x="192.5" y="79" width="26" height="14"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="완료" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G5U-sm-Xr7">
+                                        <rect key="frame" x="6" y="2" width="14" height="10"/>
+                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="8"/>
+                                        <color key="textColor" name="White"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" name="Black1"/>
+                                <constraints>
+                                    <constraint firstItem="G5U-sm-Xr7" firstAttribute="leading" secondItem="xCF-pV-IKY" secondAttribute="leading" constant="6" id="I9a-cK-cz4"/>
+                                    <constraint firstItem="G5U-sm-Xr7" firstAttribute="top" secondItem="xCF-pV-IKY" secondAttribute="top" constant="2" id="MXX-Sf-RW8"/>
+                                    <constraint firstAttribute="trailing" secondItem="G5U-sm-Xr7" secondAttribute="trailing" constant="6" id="jj0-WV-sf3"/>
+                                    <constraint firstAttribute="bottom" secondItem="G5U-sm-Xr7" secondAttribute="bottom" constant="2" id="tTH-9o-ukp"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" name="undoneCourseButton"/>
                         <constraints>
                             <constraint firstItem="KpK-vt-hOd" firstAttribute="leading" secondItem="taF-ea-GQu" secondAttribute="trailing" constant="18" id="8he-dt-CGJ"/>
                             <constraint firstItem="KpK-vt-hOd" firstAttribute="centerY" secondItem="taF-ea-GQu" secondAttribute="centerY" id="EJs-dx-PKr"/>
+                            <constraint firstItem="xCF-pV-IKY" firstAttribute="centerY" secondItem="jBT-D5-ZZw" secondAttribute="centerY" id="JXI-Qp-art"/>
                             <constraint firstAttribute="bottom" secondItem="taF-ea-GQu" secondAttribute="bottom" constant="22" id="Mwt-pb-f3l"/>
                             <constraint firstItem="taF-ea-GQu" firstAttribute="leading" secondItem="eOH-8R-YgI" secondAttribute="leading" constant="22" id="Orc-8N-rLl"/>
                             <constraint firstItem="taF-ea-GQu" firstAttribute="top" secondItem="eOH-8R-YgI" secondAttribute="top" constant="22" id="wIB-7K-tFG"/>
+                            <constraint firstItem="xCF-pV-IKY" firstAttribute="leading" secondItem="jBT-D5-ZZw" secondAttribute="trailing" constant="4" id="xdY-qA-nCZ"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -73,12 +96,23 @@
             <size key="customSize" width="596" height="260"/>
             <connections>
                 <outlet property="cellBgView" destination="eOH-8R-YgI" id="Lc0-TY-yCK"/>
+                <outlet property="completeView" destination="xCF-pV-IKY" id="dyG-Gu-oKC"/>
+                <outlet property="dateLabel" destination="jBT-D5-ZZw" id="H7Z-bl-Cyz"/>
+                <outlet property="dayLabel" destination="ByA-Tu-isC" id="VjN-OV-2O9"/>
+                <outlet property="propertyImageView" destination="taF-ea-GQu" id="C77-Ay-cQ7"/>
+                <outlet property="titleLabel" destination="ggf-FT-mjn" id="NWJ-Yb-bbV"/>
             </connections>
             <point key="canvasLocation" x="433.33333333333337" y="174.10714285714286"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="flwGraphic" width="101" height="101"/>
+        <image name="sampleMoodImg" width="300" height="300"/>
+        <namedColor name="Black1">
+            <color red="0.071000002324581146" green="0.071000002324581146" blue="0.078000001609325409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="White">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="undoneCourseButton">
             <color red="0.72200000286102295" green="0.90600001811981201" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
